# ReSocratic

./: .gitignore  README.md  deepseek_baseline.py  eval_sft_code.py  gpt_baseline.py  llama2_baseline.py  llama2_sft_gen_code.py  llama3_baseline.py  llama3_sft_gen_code.py  main.py  pyproject.toml  requirements.in  synthesisze_code.py  synthesize_question.py  synthesize_scenario.py  train_llama2.py  train_llama3.py  utils.py
data/: optibench_nonlinear.json
eval_results/: gpt-5.4-mini_fewshot.json  gpt-5.4_fewshot.json  result.json  result_gpt-5.4.json  split.py
