[project]
name = "resocratic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "aiohttp>=3.13.5",
    "aioprometheus>=23.12.0",
    "aiosignal>=1.4.0",
    "aniso8601>=10.0.1",
    "annotated-types>=0.7.0",
    "appdirs>=1.4.4",
    "async-timeout>=5.0.1",
    "asyncio>=4.0.0",
    "blinker>=1.9.0",
    "cachetools>=7.0.6",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.7",
    "clarabel>=0.11.1",
    "click>=8.3.2",
    "cloudpickle>=3.1.2",
    "cmake>=4.3.1",
    "colorama>=0.4.6",
    "comm>=0.2.3",
    "contourpy>=1.3.3",
    "cvxopt>=1.3.3",
    "cvxpy>=1.8.2",
    "cycler>=0.12.1",
    "datasets>=4.8.4",
    "dill>=0.4.1",
    "diskcache>=5.6.3",
    "distro>=1.9.0",
    "docker-pycreds>=0.4.0",
    "ecos>=2.0.14",
    "editdistance>=0.8.1",
    "einops>=0.8.2",
    "fastapi>=0.136.0",
    "filelock>=3.29.0",
    "fire>=0.7.1",
    "flask>=3.1.3",
    "flask-restful>=0.3.10",
    "fonttools>=4.62.1",
    "frozenlist>=1.8.0",
    "fsspec>=2026.2.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.46",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "h11>=0.16.0",
    "hjson>=3.1.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.11.0",
    "importlib-resources>=7.1.0",
    "interegular>=0.3.3",
    "ipywidgets>=8.1.8",
    "itsdangerous>=2.2.0",
    "joblib>=1.5.3",
    "jsonschema-specifications>=2025.9.1",
    "jupyterlab-widgets>=3.0.16",
    "kiwisolver>=1.5.0",
    "lark>=1.3.1",
    "llvmlite>=0.47.0",
    "lm-format-enforcer>=0.11.3",
    "matplotlib>=3.10.8",
    "mosek>=11.1.11",
    "mpmath>=1.3.0",
    "msgpack>=1.1.2",
    "multidict>=6.7.1",
    "multiprocess>=0.70.19",
    "networkx>=3.6.1",
    "ninja>=1.13.0",
    "nltk>=3.9.4",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "orjson>=3.11.8",
    "osqp>=1.1.1",
    "outlines>=1.2.12",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "protobuf>=6.33.6",
    "pulp>=3.3.0",
    "py-cpuinfo>=9.0.0",
    "pyarrow>=24.0.0",
    "pyarrow-hotfix>=0.7",
    "pydantic>=2.13.3",
    "pydantic-core>=2.46.3",
    "pyjwt>=2.8.0",
    "pynvml>=13.0.1",
    "pyparsing>=3.3.2",
    "pyscipopt>=6.1.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "qdldl>=0.1.9.post1",
    "quantile-python>=1.1",
    "ray>=2.55.0",
    "referencing>=0.37.0",
    "regex>=2026.4.4",
    "requests>=2.33.1",
    "ruff>=0.15.11",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scs>=3.2.11",
    "sentencepiece>=0.2.1",
    "sentry-sdk>=2.58.0",
    "setproctitle>=1.3.7",
    "smmap>=5.0.3",
    "starlette>=0.52.1",
    "sympy>=1.14.0",
    "termcolor>=3.3.0",
    "threadpoolctl>=3.6.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
    "ty>=0.0.32",
    "tzdata>=2026.1",
    "ujson>=5.12.0",
    "urllib3>=2.6.3",
    "uvicorn>=0.45.0",
    "uvloop>=0.22.1",
    "wandb>=0.26.0",
    "watchfiles>=1.1.1",
    "webencodings>=0.5.1",
    "websockets>=16.0",
    "werkzeug>=3.1.8",
    "widgetsnbextension>=4.0.15",
    "xxhash>=3.6.0",
    "yarl>=1.23.0",
    "zhipuai>=2.1.5.20250825",
    "zmq>=0.0.0",
]
